--- a/index.html
+++ b/index.html
@@ -19,6 +19,16 @@
                 <li><a href="#"><Button class="primary-btn">Hire Me</Button></a></li>
             </ul>
         </nav>
+        <div class="banner">
+            <div>
+                <h3 class="banner-greeting">Hi, I am</h3>
+                <h1 class="banner-tittle">Pappu Roy</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro rerum temporibus amet ratione blanditiis distinctio dignissimos quod labore quae sequi veritatis repudiandae aut quidem dicta atque, culpa eligendi consectetur libero!</p>
+                <button class="primary-btn">Downloed CV</button>
+                <button class="primary-btn">Contact</button>
+            </div>
+            <img class="profile" src="images/me.png" alt="">
+        </div>
     </header>
     <main>
 
