about section add

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Web Developer Portfolio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,700;1,400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -20,10 +20,10 @@
             </ul>
         </nav>
         <div class="banner">
-            <div>
-                <h3 class="banner-greeting">Hi, I am</h3>
+            <div class="banner-content">
+                <h2 class="banner-greeting">Hi, I am</h2>
                 <h1 class="banner-tittle">Pappu Roy</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro rerum temporibus amet ratione blanditiis distinctio dignissimos quod labore quae sequi veritatis repudiandae aut quidem dicta atque, culpa eligendi consectetur libero!</p>
+                <p >Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro rerum temporibus amet ratione blanditiis distinctio dignissimos quod labore quae sequi veritatis repudiandae aut quidem dicta atque, culpa eligendi consectetur libero!</p>
                 <button class="primary-btn">Downloed CV</button>
                 <button class="primary-btn">Contact</button>
             </div>
@@ -31,6 +31,12 @@
         </div>
     </header>
     <main>
+        <div class="about">
+            <h3 class="section-title">About Me</h3>
+            <p class="section-description">
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nisi magnam nobis itaque quibusdam aperiam velit. Quibusdam tenetur aliquid hic dolorum maiores, repellat facere! Vel ipsum maxime amet in laboriosam iusto.
+            </p>
+        </div>
 
     </main>
     <footer>
