--- a/index.html
+++ b/index.html
@@ -31,13 +31,33 @@
         </div>
     </header>
     <main>
-        <div class="about">
-            <h3 class="section-title">About Me</h3>
-            <p class="section-description">
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nisi magnam nobis itaque quibusdam aperiam velit. Quibusdam tenetur aliquid hic dolorum maiores, repellat facere! Vel ipsum maxime amet in laboriosam iusto.
-            </p>
-        </div>
-
+        <section>
+            <div class="about">
+                <h3 class="section-title">About Me</h3>
+                <p class="section-description">
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nisi magnam nobis itaque quibusdam aperiam velit. Quibusdam tenetur aliquid hic dolorum maiores, repellat facere! Vel ipsum maxime amet in laboriosam iusto.
+                </p>
+            </div>
+            <!-- .about-info*4>h4.info-title+p.info-description -->
+            <div class="about-info-container">
+                <div class="about-info">
+                    <h4 class="info-title">Name:</h4>
+                    <p class="info-description">Pappu Roy</p>
+                </div>
+                <div class="about-info">
+                    <h4 class="info-title">E-mail:</h4>
+                    <p class="info-description">developerpappuroy@gmail.com</p>
+                </div>
+                <div class="about-info">
+                    <h4 class="info-title">Date of Birth:</h4>
+                    <p class="info-description">26 june 2004</p>
+                </div>
+                <div class="about-info">
+                    <h4 class="info-title">From:</h4>
+                    <p class="info-description">Dinajpur,Bangladesh.</p>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
         
