--- a/index.html
+++ b/index.html
@@ -58,6 +58,84 @@
                 </div>
             </div>
         </section>
+
+        <!-- what i do -->
+        <section>
+            <h3 class="section-title">What I do</h3>
+            <p class="section-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae magnam illum repellat quaerat non. Soluta repudiandae nisi vitae odio, ipsam quo unde facilis est dicta aspernatur consectetur voluptatibus, itaque alias nihil quod laudantium id modi a ipsa! Voluptates quis repellendus aliquam tenetur ullam sint, quae sit! Reprehenderit, quidem aliquam. Velit.</p>
+            <div class="skills-container">
+                <!-- .skill*4>img+h3.skill-tittle+p.skill-description -->
+                <div class="skill">
+                    <img src="images/icons/js.png" alt="">
+                    <h3 class="skill-tittle">Java Script</h3>
+                    <p class="skill-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta nesciunt eius dolor esse velit explicabo.</p>
+                </div>
+                <div class="skill">
+                    <img src="./images/icons/react.png" alt="">
+                    <h3 class="skill-tittle">React</h3>
+                    <p class="skill-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta nesciunt eius dolor esse velit explicabo.</p>
+                </div>
+                <div class="skill">
+                    <img src="./images/icons/nodejs.png" alt="">
+                    <h3 class="skill-tittle">Node.Js</h3>
+                    <p class="skill-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta nesciunt eius dolor esse velit explicabo.</p>
+                </div>
+                <div class="skill">
+                    <img src="./images/icons/mongo.png" alt="">
+                    <h3 class="skill-tittle">Mongo DB</h3>
+                    <p class="skill-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta nesciunt eius dolor esse velit explicabo.</p>
+                </div>
+            </div>
+        </section>
+        <!-- Resume Section -->
+        <section>
+            <h2 class="section-title">A summary of My Resume</h2>
+
+            <div class="resume-container">
+                <div class="resume-column">
+                    <h3 class="resume-column-title">My Education</h3>
+
+                    <div class="resume-item">
+                        <h2 class="resume-item-title">Masters In Computer Engineering</h2>
+                        <h3 class="resume-item-institute">Harverd University/2015-2017</h3>
+                        <p class="resume-item-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere beatae reprehenderit id repudiandae, officia consequuntur?</p>
+                    </div>
+                    <hr>
+                    <div class="resume-item">
+                        <h2 class="resume-item-title">Masters In Computer Engineering</h2>
+                        <h3 class="resume-item-institute">Harverd University/2015-2017</h3>
+                        <p class="resume-item-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere beatae reprehenderit id repudiandae, officia consequuntur?</p>
+                    </div>
+                    <hr>
+                    <div class="resume-item">
+                        <h2 class="resume-item-title">Masters In Computer Engineering</h2>
+                        <h3 class="resume-item-institute">Harverd University/2015-2017</h3>
+                        <p class="resume-item-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere beatae reprehenderit id repudiandae, officia consequuntur?</p>
+                    </div>
+                </div>
+                <div class="resume-column">
+                    <h3 class="resume-column-title">My Experience</h3>
+
+                    <div class="resume-item">
+                        <h2 class="resume-item-title">Jr Font End Developer</h2>
+                        <h3 class="resume-item-institute">Apple inc/2023</h3>
+                        <p class="resume-item-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere beatae reprehenderit id repudiandae, officia consequuntur?</p>
+                    </div>
+                    <hr>
+                    <div class="resume-item">
+                        <h2 class="resume-item-title">Jr Font End Developer</h2>
+                        <h3 class="resume-item-institute">Apple inc/2023</h3>
+                        <p class="resume-item-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere beatae reprehenderit id repudiandae, officia consequuntur?</p>
+                    </div>
+                    <hr>
+                    <div class="resume-item">
+                        <h2 class="resume-item-title">HTML Developer</h2>
+                        <h3 class="resume-item-institute">Adobe Inc/2020</h3>
+                        <p class="resume-item-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere beatae reprehenderit id repudiandae, officia consequuntur?</p>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
         
