--- a/index.html
+++ b/index.html
@@ -138,7 +138,18 @@
         </section>
     </main>
     <footer>
-        
+        <div class="footer-column">
+            <h3 class="section-title">Lets Connect</h3>
+            <p class="section-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet quisquam libero repellendus temporibus soluta, omnis quam adipisci consequuntur cupiditate reiciendis molestias quis similique. Hic id nam repudiandae doloremque, quaerat similique.</p>
+            <div class="secial-links">
+                <a href=""><img src="./images/icons/facebook.png" alt=""></a> 
+                <a href=""><img src="./images/icons/insta.png" alt=""></a>
+                <a href=""><img src="./images/icons/twitter.png" alt=""></a>
+            </div>
+        </div>
+        <div class="footer-column">
+            <h3 class="section-title">Let's Massage Me</h3>
+        </div>
     </footer>
 </body>
 </html>
