--- a/index.html
+++ b/index.html
@@ -149,6 +149,12 @@
         </div>
         <div class="footer-column">
             <h3 class="section-title">Let's Massage Me</h3>
+            <form action="" class="contact">
+                <input type="text" placeholder="Your Name">
+                <input type="email" placeholder="Your email">
+                <textarea name="" id="" cols="30" rows="10" placeholder="Massage"></textarea>
+                <input class="primary-btn" type="submit" value="submit">
+            </form>
         </div>
     </footer>
 </body>
