--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
+    <script src="https://kit.fontawesome.com/752ade420e.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
@@ -24,8 +25,8 @@
                 <h2 class="banner-greeting">Hi, I am</h2>
                 <h1 class="banner-tittle">Pappu Roy</h1>
                 <p >Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro rerum temporibus amet ratione blanditiis distinctio dignissimos quod labore quae sequi veritatis repudiandae aut quidem dicta atque, culpa eligendi consectetur libero!</p>
-                <button class="primary-btn">Downloed CV</button>
-                <button class="primary-btn">Contact</button>
+                <button class="primary-btn"><i class="fa-solid fa-download"></i> Downloed CV</button>
+                <button class="primary-btn"><i class="fa-solid fa-phone"></i> Contact</button>
             </div>
             <img class="profile" src="images/me.png" alt="">
         </div>
